client: fix weird Chrome bug where video controls are invisible under div class="transparent"

--- a/client/css/core-general.styl
+++ b/client/css/core-general.styl
@@ -106,7 +106,12 @@ form .fa-question-circle-o
                     background-color: $scrollbar-bg-color
                 &::-webkit-scrollbar-thumb
                     background-color: $scrollbar-thumb-color
-    >.content-wrapper:not(.transparent)
+                li[data-name=view]
+                    background: $button-enabled-background-color
+                    margin-right: 1em
+                    a
+                        color: $button-enabled-text-color
+    >.content-wrapper:not(.transparent-container)
         background: $top-navigation-color
         padding: 1.8em
         @media (max-width: 1000px)
@@ -117,7 +122,7 @@ form .fa-question-circle-o
                 margin-bottom: 0
 
 .darktheme #content-holder
-    >.content-wrapper:not(.transparent)
+    >.content-wrapper:not(.transparent-container)
         background: $top-navigation-color-darktheme
 
 hr
